[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
stunt = { path = "../../packages/stunt", version = "0.1.3", features = ["actix"] }
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4"
actix-files = "0.6.8"


